--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -44,7 +44,7 @@
         />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/home_menu_button_characters"
+        android:id="@+id/menu_button_characters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -59,7 +59,7 @@
         />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/home_menu_button_series"
+        android:id="@+id/menu_button_series"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
