--- a/app/src/main/res/layout/activity_list_character.xml
+++ b/app/src/main/res/layout/activity_list_character.xml
@@ -7,7 +7,7 @@
     tools:context=".ListCharacterActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/tool_bar"
+        android:id="@+id/list_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_arrow_back"
@@ -22,7 +22,7 @@
         android:id="@+id/listItem"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tool_bar"
+        app:layout_constraintTop_toBottomOf="@id/list_tool_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
