add list view model and domain

--- a/app/src/main/res/layout/activity_character_detail.xml
+++ b/app/src/main/res/layout/activity_character_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CharacterDetailActivity">
+    tools:context=".ui.detail.CharacterDetailActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/details_tool_bar"
