--- a/app/src/main/res/layout/activity_list_character.xml
+++ b/app/src/main/res/layout/activity_list_character.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListCharacterActivity">
+    tools:context=".ui.list.ListCharacterActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/list_tool_bar"
